--- a/Training_IA3.ipynb
+++ b/Training_IA3.ipynb
@@ -710,7 +710,7 @@
         "\n",
         "\n",
         "# 모델은 KoAlpaca-Polyglot-5.8B 모델을 활용하였습니다\n",
-        "model_id = \"beomi/KoAlpaca-Polyglot-5.8B\"  \n",
+        "model_id = \"maywell/PiVoT-0.1-early\"  \n",
         "bnb_config = BitsAndBytesConfig(\n",
         "    load_in_8bit=True,\n",
         "    bnb_8bit_use_double_quant=True,\n",
@@ -718,7 +718,7 @@
         "    bnb_8bit_compute_dtype=torch.bfloat16\n",
         ")\n",
         "# 토크나이저는 EleutherAI의 polyglot-ko-5.8b를 사용하였습니다\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"EleutherAI/polyglot-ko-5.8b\")\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"maywell/PiVoT-0.1-early\")\n",
         "model = AutoModelForCausalLM.from_pretrained(model_id, quantization_config=bnb_config, device_map='auto')"
       ]
     },
